PSS/PSS/wwwroot/css/components/AlbumSelector.css
#albumSelector { /* How to center a div: https://stackoverflow.com/a/23703655 */
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: black;
    width: 490px;
    height: 620px;
    z-index: 999;
    border: 1px solid white;
}

#albumSelector > #header {
    height: 50px;
    padding-top: 4px;
    padding-left: 10px;
    position: fixed;
    width: 100%;
    top: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#albumSelector > #header > #buttons {
    position: absolute;
    right: 13px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#albumSelector > #albumCreatorDiv {
    display: flex;
    align-items: center;
    position: absolute;
    height: 60px;
    width: 100%;
    left: 6px;
    top: 45px;
}

.albumsAndFolders {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 110px;
    left: 6px;
    width: 97.5%;
    height: 100%;
}

.albumsAndFolders > span {
    margin-bottom: 8px;
}

.albumsList {
    margin-bottom: 12px;
    border: 1px solid white;
    padding-right: 2px;
    height: 217px;
    overflow-y: scroll;
}

.albumsList .album {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
}

.albumsList .album:hover {
    background-color: rgba(211, 211, 211, 0.1);
    cursor: pointer;
}

.albumsList .coverDiv {
    display: flex;
    width: 60px;
    height: 60px;
}

.albumsList img {
    object-fit: cover;
    width: 60px;
    height: 60px;
}

.albumsList .album input[type="checkbox"] {
    margin-left: 7px;
}

.albumsList .album span {
    margin-top: -1px;
    margin-left: 6px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

